# dotfiles-archive-2023

./: .conkyrc.qclocktwo  .gitignore  README.md
.sync/: ID
X11/: .Xdefaults  .Xmodmap.colemak-shift-dh  .Xresources  .xinitrc  lumen  luna
alpine/: .pinerc
alsa/: .asoundrc
bash/: .bash_aliases  .bashrc  .inputrc  .profile
chrome/: .vromerc
conky/: .conkyrc.qclocktwo  luna  motu
dunst/: luna
fasd/: .fasdrc
firefox/: .pentadactylrc
ghci/: .ghci
gtk/: .gtkrc-2.0  .gtkrc-2.0.mine  .gtkrc-2.0.mine.dark
hg/: .hgrc
imap/: .offlineimaprc
kb-layout-evaluation/: LICENSE  README.md
kindle/: FONT_RAMP  FONT_RAMP.103  FONT_RAMP.105  font_ramp  onedrive.url
kobo/: calibre_sync_columns.mkd  kobopatch_overrides
kustom/: 2001.klwp  2010.klwp  2012.klwp  2022.klwp  analogue.klwp  analogue_intervals.klwp  gearbox.klwp  monochrome.klwp  monologue.klwp  orbital.klwp  orrery.klwp  planetary.klwp  sundial.klwp  trialogue.klwp  trialogue_rings.klwp  trialogue_transit.klwp
lua/: .luarc
luakit/: README.md
mime/: .mailcap
miniflux/: dark.css  feeds.opml  icons-bottom.css  icons-media.css  icons-right.css  midnight-fork.css  midnight.css  nord.css  pure.css  style-meta.css  style.css  sun.css
msmtp/: .msmtprc
mutt/: .muttrc
nano/: .nanorc
notmuch/: .notmuch-config
nvpy/: .nvpy.cfg
orbit/: orbit.hs
remind/: .reminders
rtorrent/: .rtorrent.rc
rubyroom/: .rubyroomrc
screen/: .screenrc
slrn/: .jnewsrc.dsc  .slrnrc
spacemacs/: ..spacemacs.~undo-tree~  .spacemacs
tmux/: .tmux.conf
tt-rss/tt-rss/themes/hello/: LICENSE  hello.cabal
(+6091 files in other folders)
