name:                hello
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sdothum/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Hum
maintainer:          sdothum@gmail.com
copyright:           sdothum - 2016 (c) wtfpl
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hello
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
